--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 
         <div class="buttons">
             <!-- YES button -->
-            <a href="yes.html">
-                <button class="yes-btn">YES 💖</button>
-            </a>
+            <form action="https://formspree.io/f/mgolawpa" method="POST">
+    <!-- hidden input to identify who clicked -->
+    <input type="hidden" name="answer" value="YES 💖">
+    <input type="hidden" name="name" value="Harrison's Valentine">
+    <button type="submit" class="yes-btn">YES 💖</button>
+</form>
             <!-- NO button -->
             <button class="no-btn">NO 🙈</button>
         </div>
